fixed spacing on parameter page

--- a/styles.css
+++ b/styles.css
@@ -114,15 +114,17 @@ img {
 
 .search {
     width: 65vw;
-    padding: 8px 10px;
+    padding: auto;
     border: 2px solid gray;
     border-radius: 4px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
-.locEnter {
-    padding:15px 15px;
+.paramEnter {
+    padding-right:30px;
+    display:block;
+    padding:auto;
     margin-top:auto;
     text-align:center;
     width:20px;
@@ -188,6 +190,10 @@ i {
     margin:auto;
     text-align:center;
     
+}
+
+.params h4{
+    line-height:5vh;
 }
 .params input {
     margin-left: auto;
